--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "Lucas LastName",
-  "name": "James Lucas Felipe LastName Personal App",
+  "short_name": "Gabe's Portfolio",
+  "name": "Gabe Esquivel Gaghi's Portfolio Website",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "MCLogo.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
