--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "marinhocode",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://marinhocode.me",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "boxicons": "^2.1.4",
     "email-js": "^2.0.2",
+    "gh-pages": "^6.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
