--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marinhocode",
   "version": "0.1.0",
-  "homepage": "https://marinhocode.me",
+  "homepage": "https://marinhocode.site",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^5.16.4",
